final security + health setup